# GM7

./: .dockerignore  .env.prod.example  .gitignore  README.md  VERSION  docker-compose.prod.yml  package.json  pnpm-lock.yaml  render.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: desktop-ipc.toml
apps/desktop/src-tauri/src/: lib.rs  local_ai.rs  local_ai_manifest.rs  workspace.rs
apps/desktop/src-tauri/src/agent/: executor.rs  mod.rs  planner.rs  recorder.rs  vision.rs
apps/desktop/src-tauri/src/agent/providers/: claude.rs  local_compat.rs  mod.rs  native_ollama.rs  openai.rs
apps/desktop/src-tauri/src/llm/: claude.rs  mod.rs  native_ollama.rs  openai.rs  openai_compat.rs
docs/: deploy-render-vercel.md  deploying.md  desktop-signin-flow.md  migration-pairing-to-signin.md  protocol.md  releasing.md  render-backend.md  security.md  vercel-frontend.md
infra/: docker-compose.yml
scripts/: check-desktop-csp.mjs  check-desktop-security.mjs  version-check.mjs
tests/: api-auth.test.mjs  api-desktop-auth-routes.test.mjs  api-desktop-device-management.test.mjs  api-desktop-free-ai-fallback.test.mjs  api-desktop-release-truth.test.ts  api-desktop-runs.test.mjs  api-presence.test.mjs  api-ratelimit-redis-window.test.ts  api-readiness.test.mjs  api-ready.test.mjs  api-redact.test.mjs  api-retention.test.mjs  api-run-recovery.test.mjs  api-security.test.mjs  desktop-advanced-runtime.test.mjs  desktop-approvals.test.ts  desktop-assistant-engine.test.ts  (+44 more)
(+154 files in other folders)
