[package]
name = "ai-operator-desktop"
version = "0.0.6"
description = "AI Operator Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_operator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
image = { version = "0.24", default-features = false, features = ["png"] }
enigo = "0.1"
# Iteration 6: AI Assist dependencies
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
# Iteration 7: Workspace Tools
regex = "1"
auto-launch = "0.5"
# Iteration 31: Advanced Agent System
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "1"
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
